# lapa-nysa

./: .gitignore  pyproject.toml
animal_shelter/: manage.py
animal_shelter/adoptions/: admin.py  apps.py  models.py  views.py
animal_shelter/adoptions/migrations/: 0001_initial.py  0002_alter_animal_sex_alter_animal_size_and_more.py  0003_remove_animal_contacts_alter_animal_size.py  0004_delete_contact.py
animal_shelter/animal_shelter/: asgi.py  settings.py  urls.py  wsgi.py
animal_shelter/animal_shelter/templates/: adoptions.html  animal.html  cleaning.html  contact.html  food.html  index.html  layout.html  meds.html
animal_shelter/frontend/: .eslintrc  package-lock.json  package.json
animal_shelter/frontend/src/scripts/: AdoptionsCarousel.jsx  AdoptionsSearch.jsx  AnimalCard.jsx  AnimalGallery.jsx  Filters.jsx  index.js
animal_shelter/frontend/src/scripts/common/: Button.jsx
animal_shelter/frontend/src/styles/: index.scss
animal_shelter/frontend/webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js
